hamburger styling plus nav media query

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </nav>
-    <nav class="hamburger-nav">
+    <nav id="hamburger-nav">
         <div class="logo">Sandile Ndlovu</div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
