profile/hero section start

--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
         </div>
     </nav>
 
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./Assets/profile.jpg" alt="sandilw ndlovu profile picture">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Sandile Ndlovu</h1>
+            <p class="section__text__p2">Frontend Developer</p>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
