--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Sandile Ndlovu</h1>
             <p class="section__text__p2">Frontend Developer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./Assets/')">Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact</button>
+            </div>
+            <div id="socials-container">
+                 <img src="./Assets/linkedin.png" alt="My linkedIn profile" class="icon" onclick="location.href='http://linkedin.com/'">
+                 <img src="./Assets/github.png" alt="My linkedIn profile" class="icon" onclick="location.href='http://github.com/'">
+            </div>
+
         </div>
     </section>
 
