--- a/index.html
+++ b/index.html
@@ -105,12 +105,7 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Highly motivated, self-starting developer based in Johannesburg, South Africa. I've discovererd my passion for the world of web development and the beauty behind building useful websites. I am Seeking a junior dev position as I recently learned how to code by myself to finally launch a career building web applications and services amongst other professionals in the exciting world of tech.
             </p>
           </div>
         </div>
