skilled section typography

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 />
                 <div>
                   <h3>Bootsrap 5</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
@@ -182,7 +182,7 @@
                 />
                 <div>
                   <h3>Responsive Web Design</h3>
-                  <p>Intermediate</p>
+
                 </div>
               </article>
               <article>
@@ -193,7 +193,7 @@
                 />
                 <div>
                   <h3>Git Version Control</h3>
-                  <p>Intermediate</p>
+
                 </div>
               </article>
 
@@ -204,11 +204,11 @@
                   class="icon"
                 />
                 <div>
-                  <h3>UI/UX Design principles</h3>
-                  <p>Intermediate</p>
+                  <h3>UX Design principles</h3>
+
                 </div>
               </article>
-              <article>
+              <!-- <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -218,7 +218,7 @@
                   <h3>Wireframing and Prototyping</h3>
                   <p>Basic</p>
                 </div>
-              </article>
+              </article> -->
             </div>
           </div>
         </div>
