first project links

--- a/index.html
+++ b/index.html
@@ -208,17 +208,7 @@
 
                 </div>
               </article>
-              <!-- <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Wireframing and Prototyping</h3>
-                  <p>Basic</p>
-                </div>
-              </article> -->
+
             </div>
           </div>
         </div>
@@ -243,20 +233,25 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Personal Portfolio</h2>
             <div class="btn-container">
+            <a href='https://github.com/sandile05/sandile-portfolio' target="_blank">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+
               >
                 Github
               </button>
+            </a>
+            <a href='https://sandile05.github.io/sandile-portfolio' target="_blank">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+
               >
                 Live Demo
               </button>
+            </a>
+
             </div>
           </div>
           <div class="details-container color-container">
