added google in my list of education

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Sandile Ndlovu</h1>
         <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">UX Designer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -100,7 +101,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>freeCodeCamp<br />The Odin Project</p>
+              <p>freeCodeCamp<br />The Odin Project <br>Google UX Design Professional Certificate</p>
             </div>
           </div>
           <div class="text-container">
@@ -238,7 +239,6 @@
             <a href='https://github.com/sandile05/sandile-portfolio' target="_blank">
               <button
                 class="btn btn-color-2 project-btn"
-
               >
                 Github
               </button>
@@ -246,7 +246,6 @@
             <a href='https://sandile05.github.io/sandile-portfolio' target="_blank">
               <button
                 class="btn btn-color-2 project-btn"
-
               >
                 Live Demo
               </button>
