fixed projects section, changed images

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br />Frontend Development</p>
+              <p>2+ years <br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
@@ -194,6 +194,7 @@
                 />
                 <div>
                   <h3>Git Version Control</h3>
+
                 </div>
               </article>
 
@@ -207,6 +208,7 @@
                   <h3>UX Design principles</h3>
                 </div>
               </article>
+
             </div>
           </div>
         </div>
@@ -223,10 +225,39 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/hood-famous-project.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Hood Famous*</h2>
+            <div class="btn-container">
+              <a href='https://github.com/sandile05/hoodfamous' target="_blank">
+                <button
+                  class="btn btn-color-2 project-btn"
+                >
+                  Github
+                </button>
+              </a>
+              <a href='https://sandile05.github.io/hoodfamous' target="_blank">
+                <button
+                  class="btn btn-color-2 project-btn"
+                >
+                  Live Demo
+                </button>
+              </a>
+
+              </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/portfolio-project.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -250,31 +281,7 @@
 
             </div>
           </div>
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 2"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container">
+          <!-- <div class="details-container color-container">
             <div class="article-container">
               <img
                 src="./assets/project-3.png"
@@ -297,7 +304,7 @@
                 Live Demo
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <img
