--- a/index.html
+++ b/index.html
@@ -281,30 +281,6 @@
 
             </div>
           </div>
-          <!-- <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-3.png"
-                alt="Project 3"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
-            </div>
-          </div> -->
         </div>
       </div>
       <img
@@ -324,7 +300,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">sandiledev5@gmail.com</a></p>
+          <p><a href="mailto:sandiledev5@gmail.com">sandiledev5@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
