--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@
         <p class="section__text__p2">Frontend Developer</p>
         <p class="section__text__p2">UX Designer</p>
         <div class="btn-container">
-          <button
+          <a href="./assets/cv/Ndlovu_Sandile_CV.pdf" download>
+            <button
             class="btn btn-color-2"
-            onclick="window.open('./assets')"
+
           >
             Download CV
           </button>
+          </a>
+
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
           </button>
@@ -92,7 +95,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>1.5+ years <br />Frontend Development</p>
             </div>
             <div class="details-container">
               <img
