--- a/index.html
+++ b/index.html
@@ -6,36 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sandile | Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/css/all.css">
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
-    <nav id="desktop-nav">
-      <div class="logo">SANDILE.</div>
-      <div>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+
+    <nav>
+      <div class="container nav__container">
+          <a href="" class="nav__logo">
+              <img src="./assets/logo.png" alt="Navbar logo">
+          </a>
+          <ul class="nav__menu">
+              <li><a href="#about">About</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+          </ul>
+          <div class="nav__buttons">
+              <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button>
+              <button class="nav__toggle-open nav__btn"><i class="fas fa-bars"></i></button>
+              <button class="nav__toggle-close nav__btn"><i class="fas fa-close"></i></button>
+          </div>
       </div>
-    </nav>
-    <nav id="hamburger-nav">
-      <div class="logo">SANDILE.</div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
-        </div>
-      </div>
-    </nav>
+  </nav>
+
+
     <section id="profile">
       <div class="section__pic-container">
         <img src="./assets/profile.jpg" alt="Sandile profile picture" />
@@ -315,19 +310,7 @@
         </div>
       </div>
     </section>
-    <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
-      <p>Copyright &#169; 2024 Sandile Ndlovu. All Rights Reserved.</p>
-    </footer>
+
     <script src="script.js"></script>
   </body>
 </html>
