back to top scroll button

--- a/index.html
+++ b/index.html
@@ -109,12 +109,7 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
+
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
@@ -211,12 +206,6 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
     </section>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
@@ -281,12 +270,7 @@
           </div>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
+
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -309,7 +293,12 @@
           <p><a href="https://www.linkedin.com/in/sandiledev" target="_blank">LinkedIn</a></p>
         </div>
       </div>
+
     </section>
+    <a href="#" class="back-to-top">
+      <i class="fas fa-arrow-up"></i>
+    </a>
+
 
     <script src="script.js"></script>
   </body>
