fixed up experience section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1.5+ years <br />Frontend Development</p>
+              <p>2+ years <br /> Self taught Frontend Development <br><br> 1 year UI/UX design learning</p>
             </div>
             <div class="details-container">
               <img
@@ -99,7 +99,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>freeCodeCamp<br />The Odin Project <br>Google UX Design Professional Certificate</p>
+              <p>freeCodeCamp<br />The Odin Project <br> <br>Google UX Design Professional Certificate</p>
             </div>
           </div>
           <div class="text-container">
@@ -127,7 +127,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -149,7 +149,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Intermediate</p>
+                  <p>Moderate</p>
                 </div>
               </article>
               <article>
@@ -160,11 +160,23 @@
                 />
                 <div>
                   <h3>Bootsrap 5</h3>
-                  <p>Intermediate</p>
+                  <p>Moderate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>React js</h3>
+                  <p>Beginner</p>
                 </div>
               </article>
             </div>
           </div>
+
           <div class="details-container">
             <h2 class="experience-sub-title">Skills</h2>
             <div class="article-container">
@@ -179,17 +191,8 @@
 
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git Version Control</h3>
 
-                </div>
-              </article>
+
 
               <article>
                 <img
@@ -201,6 +204,60 @@
                   <h3>UX Design principles</h3>
                 </div>
               </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>WordPress development</h3>
+                </div>
+              </article>
+
+            </div>
+          </div>
+
+          <div class="details-container">
+            <h2 class="experience-sub-title">Tools</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Visual Studio Code</h3>
+
+                </div>
+              </article>
+
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Git version control</h3>
+
+                </div>
+              </article>
+
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Figma</h3>
+                  <p>wireframes & prototypes</p>
+
+                </div>
+              </article>
+
 
             </div>
           </div>
