demo project images, fix project filter

--- a/index.html
+++ b/index.html
@@ -342,49 +342,50 @@
       <li data-filter=".bootstrap">Bootstrap</li>
       <li data-filter=".ux-design">UX/UI Design</li>
       <li data-filter=".wordpress">WordPress</li>
+      <li data-filter=".beginner-learning">Beginner Learning</li>
   </ul>
 
   <!-- Project container -->
   <div class="projects__container">
       <div class="project mix html-css-js">
-          <img src="project1.jpg" alt="Project 1">
+          <img src="./assets/project1.jpg" alt="Project 1">
           <p>Web Development Project 1</p>
           <p>html css js</p>
       </div>
       <div class="project mix ux-design">
-          <img src="project2.jpg" alt="Project 2">
+          <img src="./assets/project2.jpg" alt="Project 2">
           <p>Design Project 2</p>
           <p>ux design</p>
       </div>
       <div class="project mix wordpress">
-          <img src="project3.jpg" alt="Project 3">
+          <img src="./assets/project3.jpg" alt="Project 3">
           <p>WordPress Project 3</p>
       </div>
       <div class="project mix html-css-js">
-          <img src="project4.jpg" alt="Project 4">
+          <img src="./assets/project4.jpg" alt="Project 4">
           <p>Web Development Project 4</p>
           <p>html css js</p>
       </div>
       <div class="project mix ux-design">
-          <img src="project5.jpg" alt="Project 5">
+          <img src="./assets/project5.jpg" alt="Project 5">
           <p>Design Project 5</p>
           <p>ux design</p>
       </div>
       <div class="project mix wordpress">
-        <img src="project6.jpg" alt="Project 6">
+        <img src="./assets/project6.jpg" alt="Project 6">
         <p>wordpress Project 6</p>
 
     </div>
     <div class="project mix bootstrap">
-      <img src="project7.jpg" alt="Project 7">
+      <img src="./assets/project7.jpg" alt="Project 7">
       <p>bootstrap Project 7</p>
   </div>
   <div class="project mix html-css-js">
-    <img src="project8.jpg" alt="Project 8">
+    <img src="./assets/project8.jpg" alt="Project 8">
     <p>html-css-js Project 8</p>
 </div>
 <div class="project mix wordpress">
-  <img src="project9.jpg" alt="Project 9">
+  <img src="./assets/project9.jpg" alt="Project 9">
   <p>wordpress Project 9</p>
 </div>
   </div>
