experience section update

--- a/index.html
+++ b/index.html
@@ -130,10 +130,11 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
-                  <p>Intermediate</p>
+                  <h3>HTML, CSS<br>Javascript</h3>
+                  <p>Moderate-Intermediate</p>
                 </div>
               </article>
+
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -141,29 +142,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>JavaScript</h3>
-                  <p>Moderate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Bootsrap 5</h3>
+                  <h3>Bootstrap 5</h3>
                   <p>Moderate</p>
                 </div>
               </article>
@@ -268,71 +247,6 @@
         </div>
       </div>
     </section>
-    <!-- <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/hood-famous-project.png"
-                alt="Project 2"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Hood Famous*</h2>
-            <div class="btn-container">
-              <a href='https://github.com/sandile05/hoodfamous' target="_blank">
-                <button
-                  class="btn btn-color-2 project-btn"
-                >
-                  Github
-                </button>
-              </a>
-              <a href='https://sandile05.github.io/hoodfamous' target="_blank">
-                <button
-                  class="btn btn-color-2 project-btn"
-                >
-                  Live Demo
-                </button>
-              </a>
-
-              </div>
-          </div>
-
-          <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/portfolio-project.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Personal Portfolio</h2>
-            <div class="btn-container">
-            <a href='https://github.com/sandile05/sandile-portfolio' target="_blank">
-              <button
-                class="btn btn-color-2 project-btn"
-              >
-                Github
-              </button>
-            </a>
-            <a href='https://sandile05.github.io/sandile-portfolio' target="_blank">
-              <button
-                class="btn btn-color-2 project-btn"
-              >
-                Live Demo
-              </button>
-            </a>
-
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </section> -->
 
     <section class="projects" id="projects">
        <!-- Filter buttons -->
