--- a/index.html
+++ b/index.html
@@ -261,46 +261,82 @@
 
   <!-- Project container -->
   <div class="projects__container">
-      <div class="project mix html-css-js">
-          <img src="./assets/project1.jpg" alt="Project 1">
-          <p>Web Development Project 1</p>
-          <p>html css js</p>
+    <div class="project mix html-css-js">
+      <img src="./assets/project1.jpg" alt="Project 1">
+      <p>Web Development Project 1</p>
+      <p>html css js</p>
+      <div class="project-buttons">
+          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+          <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
       </div>
+  </div>
       <div class="project mix ux-design">
           <img src="./assets/project2.jpg" alt="Project 2">
           <p>Design Project 2</p>
           <p>ux design</p>
+          <div class="project-buttons">
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+        </div>
       </div>
       <div class="project mix wordpress">
           <img src="./assets/project3.jpg" alt="Project 3">
           <p>WordPress Project 3</p>
+          <div class="project-buttons">
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+        </div>
       </div>
       <div class="project mix html-css-js">
           <img src="./assets/project4.jpg" alt="Project 4">
           <p>Web Development Project 4</p>
           <p>html css js</p>
+          <div class="project-buttons">
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+        </div>
       </div>
       <div class="project mix ux-design">
           <img src="./assets/project5.jpg" alt="Project 5">
           <p>Design Project 5</p>
           <p>ux design</p>
+          <div class="project-buttons">
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+        </div>
       </div>
       <div class="project mix wordpress">
         <img src="./assets/project6.jpg" alt="Project 6">
         <p>wordpress Project 6</p>
+        <div class="project-buttons">
+          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+          <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+      </div>
 
     </div>
     <div class="project mix bootstrap">
       <img src="./assets/project7.jpg" alt="Project 7">
       <p>bootstrap Project 7</p>
+      <div class="project-buttons">
+        <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+        <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+    </div>
   </div>
   <div class="project mix html-css-js">
     <img src="./assets/project8.jpg" alt="Project 8">
     <p>html-css-js Project 8</p>
+    <div class="project-buttons">
+      <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+      <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+  </div>
 </div>
 <div class="project mix wordpress">
   <img src="./assets/project9.jpg" alt="Project 9">
   <p>wordpress Project 9</p>
+  <div class="project-buttons">
+    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+    <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
+</div>
 </div>
   </div>
 
