footer, socilas icons styles

--- a/index.html
+++ b/index.html
@@ -59,18 +59,10 @@
           </button>
         </div>
         <div id="socials-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
-            class="icon"
-            onclick="location.href='https://linkedin.com/in/sandiledev'"
-          />
-          <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://www.github.com/sandile05'"
-          />
+          <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+              <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+              <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="https://dribble.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
         </div>
       </div>
     </section>
@@ -367,6 +359,29 @@
       </div>
 
     </section>
+    <footer>
+      <div class="container footer__container">
+          <ul class="footer__menu">
+              <!-- <li><a href="#">Home</a></li> -->
+              <li><a href="#about">About</a></li>
+              <li><a href="#experience">Experience</a></li>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#contact">Contact</a></li>
+          </ul>
+          <ul class="footer__socials">
+              <li><a href="https://x.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
+              <li><a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+              <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+              <li><a href="https://dribble.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+          </ul>
+      </div>
+      <div class="footer__copyright">
+          <small>2024 Sandile &copy; All Rights reserved.</small>
+      </div>
+  </footer>
+
+  <!-- end of footer  -->
+
     <a href="#" class="back-to-top">
       <i class="fas fa-arrow-up"></i>
     </a>
