projects view typography

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <p>Web Development Project 1</p>
       <p>html css js</p>
       <div class="project-buttons">
-          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
           <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
       </div>
   </div>
@@ -267,7 +267,7 @@
           <p>Design Project 2</p>
           <p>ux design</p>
           <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
@@ -275,7 +275,7 @@
           <img src="./assets/project3.jpg" alt="Project 3">
           <p>WordPress Project 3</p>
           <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
@@ -284,7 +284,7 @@
           <p>Web Development Project 4</p>
           <p>html css js</p>
           <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View </a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
@@ -293,7 +293,7 @@
           <p>Design Project 5</p>
           <p>ux design</p>
           <div class="project-buttons">
-            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+            <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
             <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
         </div>
       </div>
@@ -301,7 +301,7 @@
         <img src="./assets/project6.jpg" alt="Project 6">
         <p>wordpress Project 6</p>
         <div class="project-buttons">
-          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+          <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
           <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
       </div>
 
@@ -310,7 +310,7 @@
       <img src="./assets/project7.jpg" alt="Project 7">
       <p>bootstrap Project 7</p>
       <div class="project-buttons">
-        <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+        <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
         <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
     </div>
   </div>
@@ -318,7 +318,7 @@
     <img src="./assets/project8.jpg" alt="Project 8">
     <p>html-css-js Project 8</p>
     <div class="project-buttons">
-      <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+      <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
       <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
   </div>
 </div>
@@ -326,7 +326,7 @@
   <img src="./assets/project9.jpg" alt="Project 9">
   <p>wordpress Project 9</p>
   <div class="project-buttons">
-    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View Live</a>
+    <a href="https://live-demo-link1.com" target="_blank" class="btn btn-color-2">View</a>
     <a href="https://github.com/project-repo1" target="_blank" class="btn btn-color-1">GitHub</a>
 </div>
 </div>
