horizonal scroll fix,

--- a/index.html
+++ b/index.html
@@ -340,22 +340,12 @@
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
       <div class="contact-info-upper-container">
-        <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="mailto:sandiledev5@gmail.com">sandiledev5@gmail.com</a></p>
-        </div>
-        <div class="contact-info-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="LinkedIn icon"
-            class="icon contact-icon"
-          />
-          <p><a href="https://www.linkedin.com/in/sandiledev" target="_blank">LinkedIn</a></p>
-        </div>
+        <ul class="contact__list">
+          <li><a href="mailto:n.brendon05@gmail.com" class="contact__list-item" target="_blank"><i class="fas fa-envelope"></i></a></li>
+          <li><a href="https://m.me/ssandile.ndlovu" class="contact__list-item" target="_blank"><i class="fab fa-facebook-messenger"></i>  </a></li>
+          <li><a href="https://wa.me/+27749258393" class="contact__list-item" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+          <li><a href="tel:+27749258393" class="contact__list-item" target="_blank"><i class="fas fa-phone"></i></a></li>
+      </ul>
       </div>
 
     </section>
