projects section title

--- a/index.html
+++ b/index.html
@@ -241,6 +241,8 @@
     </section>
 
     <section class="projects" id="projects">
+      <h1 class="title">Projects</h1>
+      <p class="section__text__p1">Some projects I have worked on</p>
        <!-- Filter buttons -->
     <ul class="project__categories">
       <li class="mixitup-control-active" data-filter="all">All</li>
