--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
   </nav>
 
-
+  <main>
     <section id="profile">
       <div class="section__pic-container">
         <img src="./assets/profile.jpg" alt="Sandile profile picture" />
@@ -351,6 +351,8 @@
       </div>
 
     </section>
+  </main>
+
     <footer>
       <div class="container footer__container">
           <ul class="footer__menu">
