changed removed dark mode later, will work on it later

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
    />
   </head>
-  <body>
+  <body class="dark">
 
     <nav>
       <div class="container nav__container">
@@ -27,7 +27,7 @@
               <li><a href="#contact">Contact</a></li>
           </ul>
           <div class="nav__buttons">
-              <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button>
+              <!-- <button class="nav__theme-btn nav__btn"><i class="fas fa-moon"></i></button> -->
               <button class="nav__toggle-open nav__btn"><i class="fas fa-bars"></i></button>
               <button class="nav__toggle-close nav__btn"><i class="fas fa-close"></i></button>
           </div>
