--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
      rel="stylesheet"
      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
    />
+   <!-- animate  -->
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body class="dark">
 
@@ -36,10 +38,10 @@
 
   <main>
     <section id="profile">
-      <div class="section__pic-container">
+      <div class="section__pic-container" data-aos="fade-up" data-aos-delay="300">
         <img src="./assets/profile.jpg" alt="Sandile profile picture" />
       </div>
-      <div class="section__text">
+      <div class="section__text" data-aos="fade-in">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Sandile Ndlovu</h1>
         <p class="section__text__p2">Frontend Developer</p>
@@ -70,14 +72,14 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
+        <div class="section__pic-container" data-aos="fade-up">
           <img
             src="./assets/profile.jpg"
             alt="Profile picture"
             class="about-pic"
           />
         </div>
-        <div class="about-details-container">
+        <div class="about-details-container" data-aos="fade-in" data-aos-delay="300">
           <div class="about-containers">
             <div class="details-container">
               <img
@@ -110,7 +112,7 @@
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
-      <div class="experience-details-container">
+      <div class="experience-details-container" data-aos="fade-in">
         <div class="about-containers">
           <div class="details-container">
             <h2 class="experience-sub-title">Frontend Development</h2>
@@ -254,7 +256,7 @@
   </ul>
 
   <!-- Project container -->
-  <div class="projects__container">
+  <div class="projects__container" data-aos="fade-in">
     <div class="project mix html-css-js">
       <img src="./assets/project1.jpg" alt="Project 1">
       <p>Web Development Project 1</p>
@@ -341,7 +343,7 @@
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
       <h1 class="title">Contact Me</h1>
-      <div class="contact-info-upper-container">
+      <div class="contact-info-upper-container" data-aos="fade-up">
         <ul class="contact__list">
           <li><a href="mailto:n.brendon05@gmail.com" class="contact__list-item" target="_blank"><i class="fas fa-envelope"></i></a></li>
           <li><a href="https://m.me/ssandile.ndlovu" class="contact__list-item" target="_blank"><i class="fab fa-facebook-messenger"></i>  </a></li>
@@ -381,6 +383,10 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/mixitup@3/dist/mixitup.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({duration: 1500, offset: 80});
+    </script>
     <script src="script.js"></script>
   </body>
 </html>
